[project]
name = "async-task-api"
version = "0.1.0"
description = "Async task queue microservice using FastAPI and SQLModel"
authors = [
    { name = "Ishita Swami", email = "ishita.swami.1998@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi >=0.103.0,<0.118.0",
    "uvicorn >=0.22.0,<0.23.0",
    "sqlmodel >=0.0.8,<0.0.9",
    "httpx >=0.24.0,<0.25.0",
    "pytest >=7.4.0,<7.5.0",
    "python-dotenv >=1.0.0,<1.1.0"
]

[project.optional-dependencies]
dev = [
    "httpx >=0.24.0,<0.25.0"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"